--- a/_data/abenteuer.yml
+++ b/_data/abenteuer.yml
@@ -1,7 +1,7 @@
 - id: one
-  title: "Auf dem Wasser"
-  img: bg-img1
-  description: "Die Soup Bowl ist ein hinreißender Surfspot, mit wunderschönem Strandabschnitt, verwachsenen Palmen und mit Blick auf den Atlantik. Wer etwas mehr Nervenkitzel braucht, der versucht sich mit Kite-Surfing an den Silver Sands und lässt sich vom Segel vorwärtstreiben. Anschließend üben Sie den Krieger auf dem Surfbrett beim Sup Yoga und trainieren Ihr inneres Gleichgewicht. Wasser-Wellness pur erleben Sie beim Floating-Yoga. Mit den ersten Sonnenstrahlen, umgeben vom feinstem Sandstrand, starten Sie fit in den Tag. Oder lassen diesen bei einem atemberaubenden Sonnenuntergang und leisem Wellenrauschen mit einer Meditation&nbsp;ausklingen."
+  title: "Vollgas auf Yas&nbsp;Island"
+  img: bg-one
+  description: "Yas-Island ist Abu&nbsp;Dhabis Synonym für Action und rekordverdächtigen Freizeitspaß. Auf dem Yas Marina Circuit blicken Sie hinter die Kulissen beim großen Formel 1 Abu&nbsp;Dhabi Grand Prix, bevor die schnellen Autos sich in scharfe Kurven legen. Motorluft schnuppern Sie auch in der Ferrari World: Ambitionierte Rennfahrer können ihre Fähigkeiten bei einem Rennlizenz-Kurs upgraden oder testen ihr Reaktionsvermögen bei einem ohrenbetäubenden Drag Race. Rasante Abfahrten in der schnellsten Achterbahn der Welt, spektakuläre Höhenflüge beim Flying Aces Ride und der größte Ferrari Store der Welt sorgen für typisches italienisches Rennsport-Ambiente."
 
 
 
@@ -9,9 +9,9 @@
 
 
 - id: two
-  title:  "Unterwasser-Welt"
-  img: bg-img2
-  description: "Setzen Sie die Segel und gleiten mit einer Katamaran-Tour zu den versteckten Buchten dieser magischen Insel. Werden Sie zum Schatzsucher und tauchen ein in diese faszinierende Unterwasserwelt: Farbenfrohe Riffe umsäumen die unglaubliche Artenvielfalt, während Sie eines der 13 versunkenen Schiffswracks erkunden. Unvergessen wird das Erlebnis sein, mit Wasserschildkröten zu schwimmen. Eine Begegnung mit diesen majestätischen und sanften Tiere zählt zu den Highlights von&nbsp;Barbados."
+  title:  "Rasant durch die&nbsp;Wüste"
+  img: bg-two
+  description: "Die größte Sandwüste der Welt fordert mit ihren endlosen Dünenlandschaften Motorsportler aus der ganzen Welt beim Liwa International Festival zu kraftstrotzenden Hill Climbs heraus. Die gewaltige Düne Tel Moreeb mit ihrer überragenden Präsenz sorgt für Adrenalin pur. Sand und Staub wirbeln durch die Luft, wenn Pistenpiloten beim Sandboarding unberührte Spots und verheißungsvolle Abflüge wagen. Mit dem Quad oder Allrad-Jeep geht es im rasanten Tempo quer über die Landschaft der Wüste Rub al-Chali – auch bekannt als Empty Quarter."
 
 
 
@@ -20,9 +20,9 @@
 
 
 - id: three
-  title: Marathon &&nbsp;Fahrrad
-  img: bg-img3
-  description: "Stillen Sie Ihre Passion fürs Laufen und nehmen an dem großen Marathon teil. Seit über 35 Jahren zählt der 5 und 10 Kilometer 'Run Barbados' zu den beliebtesten Sportattraktionen auf der Insel. An drei Tagen im Dezember bestreiten rund 2000 Teilnehmer dieses Event. Fahrrad-Touren führen über verschlungene Inselwege oder die Küste entlang und eröffnen neue Blickwinkel auf das Atoll. Für den besonderen Kick machen Sie eine der aufregenden Crossbike-Touren&nbsp;mit."
+  title: Warner Bros. World
+  img: bg-three
+  description: "Eine weitere Attraktion auf Yas&nbsp;Island in Abu&nbsp;Dhabi ist der weltgrößte Indoor-Themenpark Warner Bros. World. Hier tauchen Filmfreunde in die Welt der Cartoons und Trickfilmstars ab. Kleine und große Menschen begegnen Batman, Fred Feuerstein und Wonder Woman in actionreichen Shows und detaillierten Themenbereichen. Streifen Sie durch die dunklen Gassen von Gotham City oder erleben die Spectacular Show auf dem Art-déco-Plaza. Superman's Metropolis und 29 hochmoderne, spannende Fahrgeschäfte und interaktive Attraktionen mit einmaliger Live-Unterhaltung, verschiedene Restaurants sowie exklusive Geschäfte runden das einmalige Freizeiterlebnis ab."
 
 
 
@@ -30,6 +30,6 @@
 
 
 - id: four
-  title: Golfen &&nbsp;mehr
-  img: bg-img4
-  description: "Grüne, sanfte Hügel, über 3000 sonnenverwöhnte Stunden und stets eine sanfte Brise: Barbados ist ein Paradies für Golfer. Mit ein bisschen Glück treffen Sie hier die ganz großen Stars auf einem der über neun angelegten Golfplätze. In der Disziplin des Road-Tennis könnten Sie sogar dem Weltmeister auf der Insel begegnen. Fast jedes Wochenende finden die kuriosen Tischtennis-Turniere statt: Alles, was es für diesen Spaß braucht, ist eine auf die Straße aufgemalte Tischtennisplatte, Holzpaddles und ein Gummiball. Nicht weniger selten sind hier auch die britischen Sportarten Polo und Cricket, die Sie auf der Insel live erleben oder mitspielen&nbsp;können. "
+  title: Wassersport
+  img: bg-four
+  description: "Temporeich sind auch die vielen Wassersportattraktionen auf Yas&nbsp;Island. Der futuristische Wasserpark Yas Waterworld verspricht auf einer Fläche von 15 Fußballfeldern mit seinen 43 Rutschen und Attraktionen einen unvergesslichen Tagesausflug. In Al Forsan üben Wassersportler den Bunny Hop an der ersten Wakeboarding-, Wasserski- und Kneeboarding-Anlage. Nach der Kür an der Leine paddeln sie sich durch tosende Stromschnellen der künstlich angelegten Wildwasserkanäle im Wadi Adventure Park am Fuße des Jebel Hafeet. Zur maritimen Entschleunigung geht's nach Desert Island: Entlang des naturbelassenen Küstenabschnitts legen Sie beim Tauchen, Segeln und Bootsfahren eine Pause ein. "
