--- a/_data/abenteuer.yml
+++ b/_data/abenteuer.yml
@@ -11,7 +11,7 @@
 - id: two
   title:  "Rasant durch die&nbsp;Wüste"
   img: bg-two
-  description: "Die größte Sandwüste der Welt fordert mit ihren endlosen Dünenlandschaften Motorsportler aus der ganzen Welt beim Liwa International Festival zu kraftstrotzenden Hill Climbs heraus. Die gewaltige Düne Tel Moreeb mit ihrer überragenden Präsenz sorgt für Adrenalin pur. Sand und Staub wirbeln durch die Luft, wenn Pistenpiloten beim Sandboarding unberührte Spots und verheißungsvolle Abflüge wagen. Mit dem Quad oder Allrad-Jeep geht es im rasanten Tempo quer über die Landschaft der Wüste Rub al-Chali – auch bekannt als Empty Quarter."
+  description: "Die größte Sandwüste der Welt fordert mit ihren endlosen Dünenlandschaften Motorsportler aus der ganzen Welt beim Liwa International Festival zu kraftstrotzenden Hill Climbs heraus. Die gewaltige Düne Tel Moreeb mit ihrer überragenden Präsenz sorgt für Adrenalin pur. Sand und Staub wirbeln durch die Luft, wenn Pistenpiloten beim Sandboarding unberührte Spots und verheißungsvolle Abflüge wagen. Mit dem Quad oder Allrad-Jeep geht es im rasanten Tempo quer über die Landschaft der Wüste Rub al-Chali – auch bekannt als Empty&nbsp;Quarter."
 
 
 
@@ -22,7 +22,7 @@
 - id: three
   title: Warner Bros. World
   img: bg-three
-  description: "Eine weitere Attraktion auf Yas&nbsp;Island in Abu&nbsp;Dhabi ist der weltgrößte Indoor-Themenpark Warner Bros. World. Hier tauchen Filmfreunde in die Welt der Cartoons und Trickfilmstars ab. Kleine und große Menschen begegnen Batman, Fred Feuerstein und Wonder Woman in actionreichen Shows und detaillierten Themenbereichen. Streifen Sie durch die dunklen Gassen von Gotham City oder erleben die Spectacular Show auf dem Art-déco-Plaza. Superman's Metropolis und 29 hochmoderne, spannende Fahrgeschäfte und interaktive Attraktionen mit einmaliger Live-Unterhaltung, verschiedene Restaurants sowie exklusive Geschäfte runden das einmalige Freizeiterlebnis ab."
+  description: "Eine weitere Attraktion auf Yas&nbsp;Island in Abu&nbsp;Dhabi ist der weltgrößte Indoor-Themenpark Warner Bros. World. Hier tauchen Filmfreunde in die Welt der Cartoons und Trickfilmstars ab. Kleine und große Menschen begegnen Batman, Fred Feuerstein und Wonder Woman in actionreichen Shows und detaillierten Themenbereichen. Streifen Sie durch die dunklen Gassen von Gotham City oder erleben die Spectacular Show auf dem Art-déco-Plaza. Superman's Metropolis und 29 hochmoderne, spannende Fahrgeschäfte und interaktive Attraktionen mit einmaliger Live-Unterhaltung, verschiedene Restaurants sowie exklusive Geschäfte runden das einmalige Freizeiterlebnis&nbsp;ab."
 
 
 
@@ -32,4 +32,4 @@
 - id: four
   title: Wassersport
   img: bg-four
-  description: "Temporeich sind auch die vielen Wassersportattraktionen auf Yas&nbsp;Island. Der futuristische Wasserpark Yas Waterworld verspricht auf einer Fläche von 15 Fußballfeldern mit seinen 43 Rutschen und Attraktionen einen unvergesslichen Tagesausflug. In Al Forsan üben Wassersportler den Bunny Hop an der ersten Wakeboarding-, Wasserski- und Kneeboarding-Anlage. Nach der Kür an der Leine paddeln sie sich durch tosende Stromschnellen der künstlich angelegten Wildwasserkanäle im Wadi Adventure Park am Fuße des Jebel Hafeet. Zur maritimen Entschleunigung geht's nach Desert Island: Entlang des naturbelassenen Küstenabschnitts legen Sie beim Tauchen, Segeln und Bootsfahren eine Pause ein. "
+  description: "Temporeich sind auch die vielen Wassersportattraktionen auf Yas&nbsp;Island. Der futuristische Wasserpark Yas Waterworld verspricht auf einer Fläche von 15 Fußballfeldern mit seinen 43 Rutschen und Attraktionen einen unvergesslichen Tagesausflug. In Al Forsan üben Wassersportler den Bunny Hop an der ersten Wakeboarding-, Wasserski- und Kneeboarding-Anlage. Nach der Kür an der Leine paddeln sie sich durch tosende Stromschnellen der künstlich angelegten Wildwasserkanäle im Wadi Adventure Park am Fuße des Jebel Hafeet. Zur maritimen Entschleunigung geht's nach Desert Island: Entlang des naturbelassenen Küstenabschnitts legen Sie beim Tauchen, Segeln und Bootsfahren eine Pause&nbsp;ein. "
