--- a/_data/natur.yml
+++ b/_data/natur.yml
@@ -1,5 +1,5 @@
 - id: one
-  title: Sehnsuchtsorte
+  title: Sehnsuchts&shy;orte
   img: bg-one
   description: "Der majestätische Strand auf Saadiyat Island lädt Sonnenhungrige in entspannter Atmosphäre zum Relaxen ein. Sportliche Freizeitaktivitäten sowie Bars und Restaurants runden den Ausflug an die Südküste ab. Umgeben von natürlichen Dünenvegetationen mit weißem Sandstrand, türkisblauem Wasser und einem für Karettschildkröten vorbehaltenen Schutzgebiet, ist der Saadiyat Beach ein Weltklasse-Resort. Auf Nurai Island haben Sie spichwörtlich die Ruhe weg: Exklusiver Luxus mit edlem Spa und Infinitypool. Von den eleganten Lounge-Betten aus, haben Sie  einen unvergleichlichen Blick auf die Ost-Küste Abu&nbsp;Dhabis."
 
@@ -9,9 +9,9 @@
 
 
 - id: two
-  title: Mangrove National Park
+  title: Mangrove National&nbsp;Park
   img: bg-two
-  description: "Wer von Abu&nbsp;Dhabi hört, denkt zunächst an einen Wüstenstaat. Rosa Flamingos, grüne Salzwiesen oder Seekühe passen nicht zwingend dazu. Doch außerhalb des Stadtzentrums säumt sich der größte, weitflächige Mangrove National Park wie eine grüne Lunge entlang der Ost-Küste. Das Paradies für Naturliebhaber bietet außergewöhnlichen Lebewesen Schutz. Im Rahmen geführter Ecotours halten Sie Ausschau nach seltenen Wasservögeln und umherstreifenden Füchsen. Gut markierte Wanderwege laden zu spannenden Sichtungen ein, die vom Kajak oder SUP-Board aus nicht minder beeindruckend sind. "
+  description: "Wer von Abu&nbsp;Dhabi hört, denkt zunächst an einen Wüstenstaat. Rosa Flamingos, grüne Salzwiesen oder Seekühe passen nicht zwingend dazu. Doch außerhalb des Stadtzentrums säumt sich der größte, weitflächige Mangrove National Park wie eine grüne Lunge entlang der Ost-Küste. Das Paradies für Naturliebhaber bietet außergewöhnlichen Lebewesen Schutz. Im Rahmen geführter Ecotours halten Sie Ausschau nach seltenen Wasservögeln und umherstreifenden Füchsen. Gut markierte Wanderwege laden zu spannenden Sichtungen ein, die vom Kajak oder SUP-Board aus nicht minder beeindruckend&nbsp;sind. "
 
 
 
@@ -20,9 +20,9 @@
 
 
 - id: three
-  title: Arabian Wildlife Park
+  title: Arabian Wildlife&nbsp;Park
   img: bg-three
-  description: "Die Destination Sir Bani Yas strotzt mit spannenden Highlights und ist eine von acht Inseln, die zusammen mit Desert Island und Al Dhafra das Wünsten-Insel-Ensemble bilden. Mehr als die Hälfte der Insel nimmt der Arabian Wildlife Park auf Sir Bani Yas in Anspruch. Auf der eigens dafür gebauten Aussichtsplattform kommen Sie anmutigen Giraffen etwas näher oder beobachten die ca. 10.000 freilaufenden Tiere von speziellen Fahrzeugen aus. Experten führen Sie auf der bis zu dreistündigen Wildlife-Tour durch den Park, während Sie arabische Oryx-Antilopen, Gazellen sowie Hyänen und Geparden in ihrer natürlichen Umgebung erleben können."
+  description: "Die Destination Sir Bani Yas strotzt mit spannenden Highlights und ist eine von acht Inseln, die zusammen mit Desert Island und Al Dhafra das Wünsten-Insel-Ensemble bilden. Mehr als die Hälfte der Insel nimmt der Arabian Wildlife Park auf Sir Bani Yas in Anspruch. Auf der eigens dafür gebauten Aussichtsplattform kommen Sie anmutigen Giraffen etwas näher oder beobachten die ca. 10.000 freilaufenden Tiere von speziellen Fahrzeugen aus. Experten führen Sie auf der bis zu dreistündigen Wildlife-Tour durch den Park, während Sie arabische Oryx-Antilopen, Gazellen sowie Hyänen und Geparden in ihrer natürlichen Umgebung erleben&nbsp;können."
 
 
 
@@ -32,4 +32,4 @@
 - id: four
   title: Falkenklinik
   img: bg-four
-  description: "Auf Tuchfühlung mit dem Nationalvogel gehen Sie in der ersten und größten Falkenklinik der Welt. Der imposante Raubvogel ist tief verwurzelt in die Historik der Vereinigten Arabischen Emirate. Jährlich werden über 6.000 Tiere in der Klinik behandelt, die von einer prominenten deutschen Tiermedizinerin geleitet wird. Eine Besichtigungs-Tour offenbart Ihnen Einblicke in die Geschichte der Falknerei und in die Lebensweise dieses mäjestätischen Tieres. Bestaunen Sie die Flugakrobatik, beobachten eine Falken-Pediküre oder freunden sich mit diesem beeindruckenden Vogel an, während Sie ihn auf dem Arm halten.  "
+  description: "Auf Tuchfühlung mit dem Nationalvogel gehen Sie in der ersten und größten Falkenklinik der Welt. Der imposante Raubvogel ist tief verwurzelt in die Historik der Vereinigten Arabischen Emirate. Jährlich werden über 6.000 Tiere in der Klinik behandelt, die von einer prominenten deutschen Tiermedizinerin geleitet wird. Eine Besichtigungs-Tour offenbart Ihnen Einblicke in die Geschichte der Falknerei und in die Lebensweise dieses mäjestätischen Tieres. Bestaunen Sie die Flugakrobatik, beobachten eine Falken-Pediküre oder freunden sich mit diesem beeindruckenden Vogel an, während Sie ihn auf dem Arm&nbsp;halten.  "
