IE compability corrections

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ client:
 core-se-link: https://www.secretescapes.de/aktuelle-angebote
 se-tracking-link: "?utm_source=SE&utm_medium=hub&utm_campaign=abudhabi_DE_2019"
 description: >
-  An was denken Sie beim Namen Barbados? Karibisches Meer, Sonne, Rhythmen und Rum fallen einem sofort ein. Doch die Insel hat noch vieles mehr zu bieten und ist mit über 92 km unberührter, idyllischer Küste ein erstklassiges Traumziel.
+  Eine moderne Oase am Arabischen Golf, eingerahmt von tropischen Mangroven­landschaften, mäjestätischen Wüsten und traumhaften Strandparadiesen.
 
 # file paths
 url:     "http://mp.secretescapes.com" # the base hostname & protocol for your site
