--- a/_data/abenteuer.yml
+++ b/_data/abenteuer.yml
@@ -1,7 +1,7 @@
 - id: one
   title: "Vollgas auf Yas&nbsp;Island"
   img: bg-one
-  description: "Yas-Island ist Abu&nbsp;Dhabis Synonym für Action und rekordverdächtigen Freizeitspaß. Auf dem Yas Marina Circuit blicken Sie hinter die Kulissen beim großen Formel 1 Abu&nbsp;Dhabi Grand Prix, bevor die schnellen Autos sich in scharfe Kurven legen. Motorluft schnuppern Sie auch in der Ferrari World: Ambitionierte Rennfahrer können ihre Fähigkeiten bei einem Rennlizenz-Kurs upgraden oder testen ihr Reaktionsvermögen bei einem ohrenbetäubenden Drag Race. Rasante Abfahrten in der schnellsten Achterbahn der Welt, spektakuläre Höhenflüge beim Flying Aces Ride und der größte Ferrari Store der Welt sorgen für typisches italienisches Rennsport-Ambiente."
+  description: "Yas-Island ist Abu Dhabis Synonym für Action und rekordverdächtigen Freizeitspaß. Auf dem Yas Marina Circuit blicken Sie hinter die Kulissen beim großen Formula 1 Etihad Airways Abu Dhabi Grand Prix 2019, bevor die schnellen Autos sich in scharfe Kurven legen. Motorluft schnuppern Sie auch in der Ferrari World Abu Dhabi: Ambitionierte Rennfahrer können ihre Fähigkeiten bei einem Rennlizenz-Kurs upgraden oder testen ihr Reaktionsvermögen bei einem ohrenbetäubenden Drag Race. Rasante Abfahrten in der schnellsten Achterbahn der Welt, spektakuläre Höhenflüge beim Flying Aces Ride und der größte Ferrari Store der Welt sorgen für typisches italienisches Rennsport-Ambiente."
 
 
 
@@ -20,9 +20,9 @@
 
 
 - id: three
-  title: Warner Bros. World
+  title: Warner Bros. World™ Abu&nbsp;Dhabi
   img: bg-three
-  description: "Eine weitere Attraktion auf Yas&nbsp;Island in Abu&nbsp;Dhabi ist der weltgrößte Indoor-Themenpark Warner Bros. World. Hier tauchen Filmfreunde in die Welt der Cartoons und Trickfilmstars ab. Kleine und große Menschen begegnen Batman, Fred Feuerstein und Wonder Woman in actionreichen Shows und detaillierten Themenbereichen. Streifen Sie durch die dunklen Gassen von Gotham City oder erleben die Spectacular Show auf dem Art-déco-Plaza. Superman's Metropolis und 29 hochmoderne, spannende Fahrgeschäfte und interaktive Attraktionen mit einmaliger Live-Unterhaltung, verschiedene Restaurants sowie exklusive Geschäfte runden das einmalige Freizeiterlebnis&nbsp;ab."
+  description: "Eine weitere Attraktion auf Yas Island in Abu Dhabi ist der weltgrößte Indoor-Themenpark Warner Bros. World™. Hier tauchen Filmfreunde in die Welt der Cartoons und Trickfilmstars ab. Kleine und große Menschen begegnen Batman, Fred Feuerstein und Wonder Woman in actionreichen Shows und detaillierten Themenbereichen. Streifen Sie durch die dunklen Gassen von Gotham City oder erleben die Spectacular Show auf dem Art-déco-Plaza. Superman's Metropolis und 29 hochmoderne, spannende Fahrgeschäfte und interaktive Attraktionen mit einmaliger Live-Unterhaltung, verschiedene Restaurants sowie exklusive Geschäfte runden das einmalige Freizeiterlebnis&nbsp;ab."
 
 
 
@@ -32,4 +32,4 @@
 - id: four
   title: Wassersport
   img: bg-four
-  description: "Temporeich sind auch die vielen Wassersportattraktionen auf Yas&nbsp;Island. Der futuristische Wasserpark Yas Waterworld verspricht auf einer Fläche von 15 Fußballfeldern mit seinen 43 Rutschen und Attraktionen einen unvergesslichen Tagesausflug. In Al Forsan üben Wassersportler den Bunny Hop an der ersten Wakeboarding-, Wasserski- und Kneeboarding-Anlage. Nach der Kür an der Leine paddeln sie sich durch tosende Stromschnellen der künstlich angelegten Wildwasserkanäle im Wadi Adventure Park am Fuße des Jebel Hafeet. Zur maritimen Entschleunigung geht's nach Desert Island: Entlang des naturbelassenen Küstenabschnitts legen Sie beim Tauchen, Segeln und Bootsfahren eine Pause&nbsp;ein. "
+  description: "Temporeich sind auch die vielen Wassersportattraktionen auf Yas Island. Der futuristische Wasserpark Yas Waterworld verspricht auf einer Fläche von 15 Fußballfeldern mit seinen über 40 Fahrgeschäften, Rutschen und Attraktionen einen unvergesslichen Tagesausflug. Am Yas Beach, der sich an der ruhigen Südküste der Insel befindet, nutzen Sie das vielseitige Sportangebot oder lehnen sich entspannt im Liegestuhl zurück. In Al Forsan üben Wassersportler den Bunny Hop an der ersten Wakeboarding-, Wasserski- und Kneeboarding-Anlage. Nach der Kür an der Leine paddeln sie sich durch tosende Stromschnellen der künstlich angelegten Wildwasserkanäle im Wadi Adventure Park am Fuße des Jebel Hafeet. Zur maritimen Entschleunigung geht's nach Desert Island: Entlang des naturbelassenen Küstenabschnitts legen Sie beim Tauchen, Segeln und Bootsfahren eine Pause&nbsp;ein. "
