--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,10 +1,11 @@
-- title: "Luxus-Residenz in der Hauptstadt der Emirate"
-  id: Sofitel
-  location: Sofitel Abu Dhabi Corniche, Abu Dhabi, Vereinigte Arabische Emirate
-  description: Inkl. Frühstück oder Halbpension, täglicher Restaurant-Ermäßigung & Extras
-  price: 42
+
+- title: "Glamouröse Entspannung in Abu&nbsp;Dhabi"
+  id: Radisson
+  location: Radisson Blu Abu Dhabi Hotel & Resort Corniche, Abu Dhabi, Vereinigte Arabische Emirate
+  description: Entspannte Sonnentage am Arabischen Golf – inkl. All-inclusive
+  price: 90
   price-description: pro Person - basierend auf 2 Personen
-  saved: 66
+  saved: 52
   flight-tag: #
-  img: "https://d1x3cbuht6sy0f.cloudfront.net/sales/79355/3c6308b6_d390_406f_a912_60749e434fc8.jpg"
-  link: "http://bit.ly/2U57GGb"
+  img: "https://d1x3cbuht6sy0f.cloudfront.net/sales/92119/ccabdc87_c2ba_4a4a_9181_f0b96a33f9c8.jpg"
+  link: "http://bit.ly/2IgLMse"
